# -

./: .mxproject  1231312123.ioc  CMakeLists.txt  README.md  flash.cfg  foot.sh  read.md  装甲板（击打反馈）v1.1.epro
Core/Inc/: main.h  stm32g0xx_it.h  tim.h
Core/Src/: gpio.c  main.cpp  stm32g0xx_it.c  tim.c
EIDE/.eide/: eide.json
MDK-ARM/: 1231312123.uvguix.x'y  1231312123.uvoptx  1231312123.uvprojx  startup_stm32g030xx.lst
MDK-ARM/1231312123/: 1231312123.axf  1231312123.build_log.htm  1231312123.hex  1231312123.htm  1231312123.lnp  1231312123.map  1231312123_1231312123.dep  adc.crf  adc.d  gpio.crf  gpio.d  key.crf  key.d  key_1.d  main.crf  main.d  startup_stm32g030xx.d  stm32g0xx_hal.crf  stm32g0xx_hal.d  stm32g0xx_hal_adc.crf  stm32g0xx_hal_adc.d  stm32g0xx_hal_adc_ex.crf  stm32g0xx_hal_adc_ex.d  stm32g0xx_hal_cortex.crf  stm32g0xx_hal_cortex.d  stm32g0xx_hal_dma.crf  stm32g0xx_hal_dma.d  stm32g0xx_hal_dma_ex.crf  stm32g0xx_hal_dma_ex.d  stm32g0xx_hal_exti.crf  stm32g0xx_hal_exti.d  stm32g0xx_hal_flash.crf  stm32g0xx_hal_flash.d  stm32g0xx_hal_flash_ex.crf  stm32g0xx_hal_flash_ex.d  stm32g0xx_hal_gpio.crf  stm32g0xx_hal_gpio.d  stm32g0xx_hal_msp.crf  stm32g0xx_hal_msp.d  stm32g0xx_hal_pwr.crf  (+28 more)
MDK-ARM/RTE/_1231312123/: RTE_Components.h
Source/: key.cpp  key.hpp  ws2812.cpp  ws2812.hpp
cmake/: gcc-arm-none-eabi.cmake  stm32
cmake/stm32cubemx/: CMakeLists.txt
